# Jasur-Labs

./: .gitignore
.obsidian/: appearance.json  workspace.json
1_lab/: 1_.py  2_.py
2_lab/: main.py
fp/1_lab/: 3_.py
fp/2_lab/: main.py
fp/3_lab/: Description.md  blocker.py  config.py  logger.py  main copy.py
fp/3_lab/test_scripts/: test_large_packet.py  test_repeated_requests.py
fp/4_lab/: Description.md  chat_client.py  chat_server.py  chat_server1.py  test.py  test_chat_server.py  test_chat_server1.py
fp/4_lab_chat/: server.py
fp/5/: chat_client.py  chat_server.py  conftest.py  test_chat.py
fp/5_lab_chat_GUI/: server.py
fp/6/: client.py  server.py  test_chat_server.py
fp/books_system/: books.json  main.py
fp/chat/: client.py
fp/chat_GUI/: client.py  server.py
fp/detector/: detector.py
fp/detector/test_scripts/: test_port_scan.py
fp/detector_with_GUI/: GUI.py  detector.py  main.py
fp/detector_with_GUI_linux/: detector.py
fp/parser_tg_vk/: main.py
linux/audit/: log_viewer.py  main.py
linux/audit/config/: audit_config.toml
linux/audit/src/: event_filter.py  event_monitor.py  logger.py  main.py  notification.py  report_generator.py
linux/demon/: BackupDaemon.cpp  CMakeLists.txt  Demon.md  config.json  main.py
linux/detector_with_GUI_linux/: GUI.py  blocker.py  logger.py  main.py
